--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Hello from Nginx!</title>
   </head>
   <body>
-    <h1>Hello from Networking Group!</h1>
+    <h1>Hello from Networking Group</h1>
     <p>This is a sample page .</p>
   </body>
 </html>
